--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,24 @@
 {% extends "base.html" %}
 {% block title %}Inloggen{% endblock %}
 {% block content %}
+
 <div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="mb-4">Inloggen bij AshNote</h2>
-        <form method="POST">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-5">
+        <h2 class="mb-4 text-center">Inloggen</h2>
+        <form method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Gebruikersnaam</label>
-                <input type="text" name="username" class="form-control" required>
+                <input type="text" class="form-control" name="username" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Wachtwoord</label>
-                <input type="password" name="password" class="form-control" required>
+                <input type="password" class="form-control" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary">Inloggen</button>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Inloggen</button>
+            </div>
         </form>
     </div>
 </div>
+
 {% endblock %}
