--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -28,13 +27,23 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
-                {% if session.get("user") %}
-                    <ul class="navbar-nav">
+                <ul class="navbar-nav">
+                    {% if session.get("user") %}
+                        <li class="nav-item me-2">
+                            <a href="{{ url_for('account') }}" class="btn btn-outline-dark btn-sm mt-2 mt-lg-0">Mijn account</a>
+                        </li>
                         <li class="nav-item">
                             <a href="{{ url_for('logout') }}" class="btn btn-outline-secondary btn-sm mt-2 mt-lg-0">Uitloggen</a>
                         </li>
-                    </ul>
-                {% endif %}
+                    {% else %}
+                        <li class="nav-item me-2">
+                            <a href="{{ url_for('login') }}" class="btn btn-outline-primary btn-sm mt-2 mt-lg-0">Inloggen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ url_for('register') }}" class="btn btn-primary btn-sm mt-2 mt-lg-0">Registreren</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
